--- a/notebooks/string_quartet_inference.ipynb
+++ b/notebooks/string_quartet_inference.ipynb
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_name = \"mtvae_0021\"\n",
+    "exp_name = \"mtvae\"\n",
     "exp_time = \"2021-06-06T09:32:32\"\n",
     "saved_model_path = f\"../experiments/{exp_name}/{exp_time}/saved_model\""
    ]
