quant eval figures for paper

--- a/papers/final/alex/paper.tex
+++ b/papers/final/alex/paper.tex
@@ -397,12 +397,38 @@ the original inputs, preserving the key signature and general rhythmic
 and melodic structure, albeit with noticeable differences at the
 individual note level.
 
-A collection of samples of the autoencoded outputs and
-interpolations, converted to mp3 format, is presented at:
+A collection of samples of the autoencoded outputs and interpolations,
+converted to mp3 format, is presented at the following URL:
 \url{https://drive.google.com/drive/folders/1SlQOI_cL452PftO3KmOYO_qglE2RotCX?usp=sharing}.
 Each of the 18 directories contains five interpolations between two of
-the string quartet pieces in the MusicNet corpus, numbered 0-4.
+the string quartet pieces in the MusicNet corpus, numbered 0-4, where
+0 is the reconstruction of the first piece, 4 is the reconstruciton of
+the second piece, and 1-3 are linear interpolations between the two
+pieces. Each file is cropped to the first 16 measures only.
 
+The interpolations are between the following 18 pairs of pieces
+
+\begin{itemize}
+\tightlist
+\item \texttt{Haydn/2104\_op64n5\_1.mid} and \texttt{Ravel/2178\_gr\_rqtf2.mid}
+\item \texttt{Haydn/2105\_op64n5\_2.mid} and   \texttt{Ravel/2179\_gr\_rqtf3.mid}
+\item \texttt{Haydn/2106\_op64n5\_3.mid} and   \texttt{Ravel/2177\_gr\_rqtf1.mid}
+\item \texttt{Beethoven/2497\_qt11\_4.mid} and \texttt{Mozart/1822\_kv\_421\_1.mid}
+\item \texttt{Beethoven/2433\_qt16\_3.mid} and \texttt{Mozart/1859\_kv\_464\_2.mid}
+\item \texttt{Beethoven/2368\_qt12\_4.mid} and \texttt{Mozart/1807\_kv\_387\_3.mid}
+\item \texttt{Beethoven/2314\_qt15\_2.mid} and \texttt{Mozart/1791\_kv\_465\_4.mid}
+\item \texttt{Beethoven/2480\_qt05\_1.mid} and \texttt{Mozart/1792\_kv\_465\_1.mid}
+\item \texttt{Beethoven/2481\_qt05\_2.mid} and \texttt{Mozart/1835\_kv\_590\_3.mid}
+\item \texttt{Beethoven/2379\_qt08\_4.mid} and \texttt{Mozart/1805\_kv\_387\_1.mid}
+\item \texttt{Beethoven/2365\_qt12\_1.mid} and \texttt{Mozart/1793\_kv\_465\_2.mid}
+\item \texttt{Beethoven/2562\_qt02\_4.mid} and \texttt{Mozart/1790\_kv\_465\_3.mid}
+\item \texttt{Beethoven/2494\_qt11\_1.mid} and \texttt{Mozart/1789\_kv\_465\_2.mid}
+\item \texttt{Beethoven/2403\_qt01\_4.mid} and \texttt{Mozart/1788\_kv\_465\_1.mid}
+\item \texttt{Beethoven/2376\_qt08\_1.mid} and \texttt{Dvorak/1916\_dvq10m1.mid}
+\item \texttt{Beethoven/2384\_qt13\_4.mid} and \texttt{Bach/2242\_vs1\_2.mid}
+\item \texttt{Beethoven/2560\_qt02\_2.mid} and \texttt{Beethoven/2621\_qt07\_1.mid}
+\item \texttt{Beethoven/2377\_qt08\_2.mid} and \texttt{Beethoven/2381\_qt13\_1.mid}
+\end{itemize}
 
 \subsection{Model Evaluation}
 
@@ -426,6 +452,77 @@ compare against known reference distributions per musical genre
 associated with designing a human subjects experiment, we
 utilize this quantitative approach to the quality assessment of
 generated samples.
+
+\begin{figure}[htbp]
+    \begin{center}
+        \scalebox{0.6}{\input{figures/source_pitch_count.pgf}}
+    \end{center}
+    \caption{Distinct pitch counts per sample for source samples.}
+    \label{source_pitches}
+\end{figure}
+
+\begin{figure}[htbp]
+    \begin{center}
+        \scalebox{0.6}{\input{figures/generated_pitch_count.pgf}}
+    \end{center}
+    \caption{Distinct pitch counts per sample for generated samples.}
+    \label{generated_pitches}
+\end{figure}
+
+\begin{figure}[htbp]
+    \begin{center}
+        \scalebox{0.6}{\input{figures/pitch_class_histogram.pgf}}
+    \end{center}
+    \caption{Comparative pitch class histogram for source and generated samples.}
+    \label{pch}
+\end{figure}
+
+\begin{figure}[htbp]
+    \begin{center}
+        \scalebox{0.6}{\input{figures/pitch_range_source.pgf}}
+    \end{center}
+    \caption{Pitch range per sample for source samples.}
+    \label{source_ranges}
+\end{figure}
+
+\begin{figure}[htbp]
+    \begin{center}
+        \scalebox{0.6}{\input{figures/pitch_range_generated.pgf}}
+    \end{center}
+    \caption{Pitch range per sample for generated samples.}
+    \label{generated_ranges}
+\end{figure}
+
+\begin{figure}[htbp]
+    \begin{center}
+        \scalebox{0.6}{\input{figures/avg_pitch_interval_source.pgf}}
+    \end{center}
+    \caption{Average pitch interval per sample for source samples.}
+    \label{source_interval}
+\end{figure}
+
+\begin{figure}[htbp]
+    \begin{center}
+        \scalebox{0.6}{\input{figures/avg_pitch_interval_generated.pgf}}
+    \end{center}
+    \caption{Average pitch interval per sample for generated samples.}
+    \label{generated_interval}
+\end{figure}
+
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\linewidth]{figures/pctm_source.png}
+  \caption{Pitch class transition matrix for source samples.}
+  \label{pctm_source}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\linewidth]{figures/pctm_generated.png}
+  \caption{Pitch class transition matrix for generated samples.}
+  \label{pctm_generated}
+\end{figure}
 
 \section{Discussion}
 
